@@ -263,15 +263,15 @@ public class Loader_Recipes_Chem implements Runnable {
 		
 		RM.DistillationTower.addRecipe0(F, 64,  16                         , FL.array(FL.Biomass       .make( 80)), FL.array(FL.BioEthanol.make(20), MT.Glycerol.liquid(U50, F), FL.Methane.make(4), FL.DistW.make(50)), ZL_IS);
 		RM.DistillationTower.addRecipe0(F, 64,  16                         , FL.array(FL.BiomassIC2    .make( 80)), FL.array(FL.BioEthanol.make(20), MT.Glycerol.liquid(U50, F), FL.Methane.make(4), FL.DistW.make(50)), ZL_IS);
-		RM.DistillationTower.addRecipe0(F, 64, 512, new long[] {9000, 9000}, FL.array(FL.Oil_ExtraHeavy.make( 50)), FL.array(FL.SFuel.make(70), FL.SDiesel.make(45), FL.SKerosine.make(40), FL.SPetrol.make(35), FL.SNaphtha.make(20),FL.Propane.make(10), FL.Butane.make(10), FL.lube(100)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
-		RM.DistillationTower.addRecipe0(F, 64, 384, new long[] {7000, 7000}, FL.array(FL.Oil_Heavy     .make( 50)), FL.array(FL.SFuel.make(60), FL.SDiesel.make(35), FL.SKerosine.make(35), FL.SPetrol.make(30), FL.SNaphtha.make(15),FL.Propane.make(15), FL.Butane.make(15), FL.lube( 80)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1)); if (FL.Oil_Heavy2.exists())
-		RM.DistillationTower.addRecipe0(F, 64, 384, new long[] {7000, 7000}, FL.array(FL.Oil_Heavy2    .make( 50)), FL.array(FL.SFuel.make(60), FL.SDiesel.make(35), FL.SKerosine.make(35), FL.SPetrol.make(30), FL.SNaphtha.make(15),FL.Propane.make(15), FL.Butane.make(15), FL.lube( 80)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
-		RM.DistillationTower.addRecipe0(F, 64, 256, new long[] {5000, 5000}, FL.array(FL.Oil_Medium    .make( 50)), FL.array(FL.SFuel.make(50), FL.SDiesel.make(25), FL.SKerosine.make(25), FL.SPetrol.make(25), FL.SNaphtha.make(25),FL.Propane.make(25), FL.Butane.make(25), FL.lube( 50)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
-		RM.DistillationTower.addRecipe0(F, 64, 256, new long[] {5000, 5000}, FL.array(FL.Oil_Normal    .make( 50)), FL.array(FL.SFuel.make(50), FL.SDiesel.make(25), FL.SKerosine.make(25), FL.SPetrol.make(25), FL.SNaphtha.make(20),FL.Propane.make(25), FL.Butane.make(25), FL.lube( 50)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1)); if (FL.Oil_HotCrude.exists())
-		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {5000, 5000}, FL.array(FL.Oil_HotCrude  .make( 50)), FL.array(FL.SFuel.make(50), FL.SDiesel.make(25), FL.SKerosine.make(25), FL.SPetrol.make(25), FL.SNaphtha.make(10),FL.Propane.make(25), FL.Butane.make(25), FL.lube( 50)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
-		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {3000, 3000}, FL.array(FL.Oil_Light     .make( 50)), FL.array(FL.SFuel.make(25), FL.SDiesel.make(15), FL.SKerosine.make(15), FL.SPetrol.make(15), FL.SNaphtha.make(20),FL.Propane.make(50), FL.Butane.make(50), FL.lube( 25)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1)); if (FL.Oil_Light2.exists())
-		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {3000, 3000}, FL.array(FL.Oil_Light2    .make( 50)), FL.array(FL.SFuel.make(25), FL.SDiesel.make(15), FL.SKerosine.make(15), FL.SPetrol.make(15), FL.SNaphtha.make(20),FL.Propane.make(50), FL.Butane.make(50), FL.lube( 25)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
-		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {2000, 2000}, FL.array(FL.Oil_Soulsand  .make( 50)), FL.array(FL.SFuel.make(20), FL.SDiesel.make(10), FL.SKerosine.make(10), FL.SPetrol.make(10), FL.SNaphtha.make(10),FL.Propane.make(10), FL.Butane.make(10), FL.lube( 80)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
+		RM.DistillationTower.addRecipe0(F, 64, 512, new long[] {9000, 9000}, FL.array(FL.Oil_ExtraHeavy.make( 50)), FL.array(FL.SFuel.make(70), FL.SDiesel.make(45), FL.SKerosine.make(40), FL.SPetrol.make(35), FL.SNaphtha.make(25),FL.SGasoil.make(15),FL.Propane.make(10), FL.Butane.make(10), FL.lube(100)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
+		RM.DistillationTower.addRecipe0(F, 64, 384, new long[] {7000, 7000}, FL.array(FL.Oil_Heavy     .make( 50)), FL.array(FL.SFuel.make(60), FL.SDiesel.make(35), FL.SKerosine.make(35), FL.SPetrol.make(30), FL.SNaphtha.make(20),FL.SGasoil.make(20),FL.Propane.make(15), FL.Butane.make(15), FL.lube( 80)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1)); if (FL.Oil_Heavy2.exists())
+		RM.DistillationTower.addRecipe0(F, 64, 384, new long[] {7000, 7000}, FL.array(FL.Oil_Heavy2    .make( 50)), FL.array(FL.SFuel.make(60), FL.SDiesel.make(35), FL.SKerosine.make(35), FL.SPetrol.make(30), FL.SNaphtha.make(20),FL.SGasoil.make(20),FL.Propane.make(15), FL.Butane.make(15), FL.lube( 80)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
+		RM.DistillationTower.addRecipe0(F, 64, 256, new long[] {5000, 5000}, FL.array(FL.Oil_Medium    .make( 50)), FL.array(FL.SFuel.make(50), FL.SDiesel.make(25), FL.SKerosine.make(25), FL.SPetrol.make(25), FL.SNaphtha.make(25),FL.SGasoil.make(20),FL.Propane.make(25), FL.Butane.make(25), FL.lube( 50)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
+		RM.DistillationTower.addRecipe0(F, 64, 256, new long[] {5000, 5000}, FL.array(FL.Oil_Normal    .make( 50)), FL.array(FL.SFuel.make(50), FL.SDiesel.make(25), FL.SKerosine.make(25), FL.SPetrol.make(25), FL.SNaphtha.make(20),FL.SGasoil.make(25),FL.Propane.make(25), FL.Butane.make(25), FL.lube( 50)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1)); if (FL.Oil_HotCrude.exists())
+		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {5000, 5000}, FL.array(FL.Oil_HotCrude  .make( 50)), FL.array(FL.SFuel.make(50), FL.SDiesel.make(25), FL.SKerosine.make(25), FL.SPetrol.make(25), FL.SNaphtha.make(15),FL.SGasoil.make(20),FL.Propane.make(25), FL.Butane.make(25), FL.lube( 50)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
+		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {3000, 3000}, FL.array(FL.Oil_Light     .make( 50)), FL.array(FL.SFuel.make(25), FL.SDiesel.make(15), FL.SKerosine.make(15), FL.SPetrol.make(15), FL.SNaphtha.make(20),FL.SGasoil.make(30),FL.Propane.make(50), FL.Butane.make(50), FL.lube( 25)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1)); if (FL.Oil_Light2.exists())
+		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {3000, 3000}, FL.array(FL.Oil_Light2    .make( 50)), FL.array(FL.SFuel.make(25), FL.SDiesel.make(15), FL.SKerosine.make(15), FL.SPetrol.make(15), FL.SNaphtha.make(20),FL.SGasoil.make(30),FL.Propane.make(50), FL.Butane.make(50), FL.lube( 25)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
+		RM.DistillationTower.addRecipe0(F, 64, 128, new long[] {2000, 2000}, FL.array(FL.Oil_Soulsand  .make( 50)), FL.array(FL.SFuel.make(20), FL.SDiesel.make(10), FL.SKerosine.make(10), FL.SPetrol.make(10), FL.SNaphtha.make(10),FL.SGasoil.make(25),FL.Propane.make(10), FL.Butane.make(10), FL.lube( 80)), dustTiny.mat(MT.WaxParaffin, 1), dustTiny.mat(MT.Asphalt, 1));
 		
 		RM.Mixer            .addRecipe0(F, 64, 300, FL.array(FL.SFuel.make(16000),     FL.Hydrogen.make(1000)), FL.array(FL.Fuel.make(15000),       MT.H2S.gas(U, T)), ZL_IS); 
 		RM.Mixer            .addRecipe0(F, 64, 300, FL.array(FL.SDiesel.make(16000),   FL.Hydrogen.make(1000)), FL.array(FL.Diesel.make(15000),     MT.H2S.gas(U, T)), ZL_IS); 
